Fixing FindBugs in Test